# pyla

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  SPEC.md  bench.py  pyla.py  pyproject.toml  tinylm.py
editor/vscode-pyla/: README.md  language-configuration.json  package.json
editor/vscode-pyla/syntaxes/: pyla.tmLanguage.json
examples/: brainfuck.pyla  brainrot.fr  closures.pyla  data_structures.pyla  fib.pyla  fizzbuzz.pyla  higher_order.pyla  modules_demo.pyla  neural_net.pyla  pipelines.pyla
pyla/: __init__.py  ast_nodes.py  builtins.py  cli.py  compiler.py  diagnostics.py  environment.py  errors.py  evaluator.py  lexer.py  modules.py  objects.py  parser.py  repl.py  tokens.py  vm.py
pyla/std/: list.pyla  math.pyla  rand.pyla
tests/: spec_conformance.pyla  test_brainrot.py  test_evaluator.py  test_language_v3.py  test_lexer.py  test_lovable.py  test_modules.py  test_parser.py  test_stdlib_math_rand.py  test_trace.py  test_vm.py
