[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pyla-lang"
version = "0.4.1"
description = "Pyla: a small pipeline-first scripting language (with an optional Gen Z dialect, no cap)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Bhavya Sree Pyla" }]
keywords = ["interpreter", "language", "bytecode", "vm", "pratt-parser", "pipeline"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/bhavyasreepyla/pyla"
Source = "https://github.com/bhavyasreepyla/pyla"
Issues = "https://github.com/bhavyasreepyla/pyla/issues"

[project.scripts]
pyla = "pyla.cli:main"

[tool.setuptools]
packages = ["pyla"]

[tool.setuptools.package-data]
pyla = ["std/*.pyla"]
